--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <img src="assets/img/team/mentor.jpeg" alt="">
               <h4>Mentor</h4>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="signup-mentor.html">Sign up</a>
+                <a class="cta-btn align-middle" href="signup.html">Sign up</a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
               <img src="assets/img/team/mentee.jpeg" alt="">
               <h4>Mentee</h4>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="signup-mentee.html">Sign up</a>
+                <a class="cta-btn align-middle" href="signup.html">Sign up</a>
               </div>
             </div>
           </div>
