--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signup-signin.html">Sign Up / Sign In</a></li>
+          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -102,15 +102,15 @@
 
             <!-- Phone Number input -->
             <div class="form-outline mb-4">
-              <input type="tel" id="registerPhoneNumber" class="form-control" placeholder="123-456-789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
+              <input type="tel" id="registerPhoneNumber" class="form-control" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
               <label class="form-label" for="registerPhoneNumber">Phone Number</label>
             </div>
 
             <!-- Preferred Contact Method input -->
             <div class="form-outline mb-4">
               <select id="registerPreferredContactMethod" name="registerPreferredContactMethod">
-                <option value="volvo">Email</option>
-                <option value="saab">Phone Number</option>
+                <option value="email">Email</option>
+                <option value="phoneNumber">Phone Number</option>
               </select>
               <label class="form-label" for="registerPreferredContactMethod">Preferred Contact Method</label>
             </div>
@@ -121,10 +121,19 @@
               <label class="form-label" for="registerPassword">Password</label>
             </div>
 
-            <!-- Areas of Expertise input -->
+            <!-- Role input -->
             <div class="form-outline mb-4">
-              <input type="text" id="registerAreasOfExpertise" class="form-control" placeholder="Describe in which areas you will provide expertise (e.g., helping with FAFSA application, coaching for interviews, etc.)" />
-              <label class="form-label" for="registerAreasOfExpertise">Areas of Expertise</label>
+              <select id="registerRole" name="registerRole">
+                <option value="mentor">Mentor</option>
+                <option value="mentee">Mentee</option>
+              </select>
+              <label class="form-label" for="registerRole">Role</label>
+            </div>
+
+            <!-- Areas input -->
+            <div class="form-outline mb-4">
+              <input type="text" id="registerAreas" class="form-control" placeholder="Describe in which areas you will provide expertise as a mentor or will require support as a mentee (e.g., FAFSA application, preparing for interviews, etc.)" />
+              <label class="form-label" for="registerAreas">Areas</label>
             </div>
 
             <!-- Checkbox -->
@@ -177,58 +186,7 @@
   <script src="assets/js/main.js"></script>
 
    <!-- Firebase JS Files -->
-   <!-- <script src="assets/js/authenticate.js"></script> -->
-
-   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
-    import { getDatabase } from 'https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js' 
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
-
-    // TODO: Replace the following with your app's Firebase project configuration
-    // See: https://firebase.google.com/docs/web/learn-more#config-object
-
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-        apiKey: "AIzaSyBhqIalP3-K-gXgQNewWVQ5CVKDMRfsF-E",
-        authDomain: "hispanicswhocollege-e3c8b.firebaseapp.com",
-        databaseURL: "https://hispanicswhocollege-e3c8b-default-rtdb.firebaseio.com",
-        projectId: "hispanicswhocollege-e3c8b",
-        storageBucket: "hispanicswhocollege-e3c8b.appspot.com",
-        messagingSenderId: "179729519037",
-        appId: "1:179729519037:web:368abaf78714e3d929c2d4",
-        measurementId: "G-FK5L5DPBC2"
-      };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-
-
-    // Initialize Firebase Authentication and get a reference to the service
-    const auth = getAuth(app);
-
-    signUp.addEventListener('click', (e)=>{
-
-        var email = document.getElementById('registerEmail').value;
-        var password = document.getElementById('registerPassword').value;
-
-        createUserWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-                // Signed in 
-                const user = userCredential.user;
-
-                alert('user created!');
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                
-                alert(registerEmail);
-            });
-
-    });
-
-   </script>
+   <script src="assets/js/authenticate.js"></script>
 
 </body>
 
