--- a/signin.html
+++ b/signin.html
@@ -58,7 +58,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signup-signin.html">Sign Up / Sign In</a></li>
+          <li><a class="getstarted scrollto" href="signin.html">Sign In</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -68,141 +68,60 @@
 
   <main id="main">
 
-    <!-- ======= Sign Up / Sign In Section ======= -->
-    <section id="signup-signin" class="contact">
+    <!-- ======= Sign In Section ======= -->
+    <section id="signin" class="contact">
       <div class="container">
 
         <div class="section-title">
-          <h2>Sign Up / Sign In</h2>
-          <p>Create a new account or login to your account.</p>
+          <h2>Sign In</h2>
+          <p>Login to your account.</p>
         </div>
 
         <div class="row">
           <!--Reused 'Login-register' form from https://mdbootstrap.com/docs/standard/extended/login/# to create the sign-up / sign in form.-->
           
-          <!-- Pills navs -->
-          <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
-            <li class="nav-item" role="presentation">
-              <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="#pills-login" role="tab"
-                aria-controls="pills-login" aria-selected="true">Login</a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" id="tab-register" data-mdb-toggle="pill" href="#pills-register" role="tab"
-                aria-controls="pills-register" aria-selected="false">Register</a>
-            </li>
-          </ul>
-          <!-- Pills navs -->
-
-          <!-- Pills content -->
-          <div class="tab-content">
-            <div class="tab-pane fade" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-              <form>
-
-                <!-- Email input -->
-                <div class="form-outline mb-4">
-                  <input type="email" id="loginName" class="form-control" />
-                  <label class="form-label" for="loginName">Email or username</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4">
-                  <input type="password" id="loginPassword" class="form-control" />
-                  <label class="form-label" for="loginPassword">Password</label>
-                </div>
-
-                <!-- 2 column grid layout -->
-                <div class="row mb-4">
-                  <div class="col-md-6 d-flex justify-content-center">
-                    <!-- Checkbox -->
-                    <div class="form-check mb-3 mb-md-0">
-                      <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-                      <label class="form-check-label" for="loginCheck"> Remember me </label>
-                    </div>
-                  </div>
-
-                  <div class="col-md-6 d-flex justify-content-center">
-                    <!-- Simple link -->
-                    <a href="#!">Forgot password?</a>
-                  </div>
-                </div>
-
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-
-                <!-- Register buttons -->
-                <div class="text-center">
-                  <p>Not a member? <a href="#!">Register</a></p>
-                </div>
-              </form>
+          <form>
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+              <input type="email" id="loginName" class="form-control" />
+              <label class="form-label" for="loginName">Email or username</label>
             </div>
-            <div class="tab-pane fade show active" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-              <form>
 
-                <!-- Name input -->
-                <div class="form-outline mb-4">
-                  <input type="text" id="registerName" class="form-control" />
-                  <label class="form-label" for="registerName">Name</label>
-                </div>
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+              <input type="password" id="loginPassword" class="form-control" />
+              <label class="form-label" for="loginPassword">Password</label>
+            </div>
 
-                <!-- Username input -->
-                <div class="form-outline mb-4">
-                  <input type="text" id="registerUsername" class="form-control" />
-                  <label class="form-label" for="registerUsername">Username</label>
-                </div>
-
-                <!-- Email input -->
-                <div class="form-outline mb-4">
-                  <input type="email" id="registerEmail" class="form-control" />
-                  <label class="form-label" for="registerEmail">Email</label>
-                </div>
-
-                <!-- Phone Number input -->
-                <div class="form-outline mb-4">
-                  <input type="tel" id="registerPhoneNumber" class="form-control" placeholder="123-456-789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
-                  <label class="form-label" for="registerPhoneNumber">Phone Number</label>
-                </div>
-
-                <!-- Preferred Contact Method input -->
-                <div class="form-outline mb-4">
-                  <select id="registerPreferredContactMethod" name="registerPreferredContactMethod">
-                    <option value="volvo">Email</option>
-                    <option value="saab">Phone Number</option>
-                  </select>
-                  <label class="form-label" for="registerPreferredContactMethod">Preferred Contact Method</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4">
-                  <input type="password" id="registerPassword" class="form-control" />
-                  <label class="form-label" for="registerPassword">Password</label>
-                </div>
-
-                <!-- Areas of Expertise input -->
-                <div class="form-outline mb-4">
-                  <input type="text" id="registerAreasOfExpertise" class="form-control" placeholder="Describe in which areas you will provide expertise (e.g., helping with FAFSA application, coaching for interviews, etc.)" />
-                  <label class="form-label" for="registerAreasOfExpertise">Areas of Expertise</label>
-                </div>
-
+            <!-- 2 column grid layout -->
+            <div class="row mb-4">
+              <div class="col-md-6 d-flex justify-content-center">
                 <!-- Checkbox -->
-                <div class="form-check d-flex justify-content-center mb-4">
-                  <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
-                    aria-describedby="registerCheckHelpText" />
-                  <label class="form-check-label" for="registerCheck">
-                    I have read and agree to the terms
-                  </label>
+                <div class="form-check mb-3 mb-md-0">
+                  <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
+                  <label class="form-check-label" for="loginCheck"> Remember me </label>
                 </div>
+              </div>
 
-                <!-- Submit button -->
-                <button type="submit" id="signUp" name="signUp" class="btn btn-primary btn-block mb-3">Sign up</button>
-              </form>
+              <div class="col-md-6 d-flex justify-content-center">
+                <!-- Simple link -->
+                <a href="#!">Forgot password?</a>
+              </div>
             </div>
-          </div>
-          <!-- Pills content -->
+
+            <!-- Submit button -->
+            <button type="submit" id="signin" name="signin" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+            <!-- Sign Up buttons -->
+            <div class="text-center">
+              <p>Not a member? <a href="signup.html">Sign Up</a></p>
+            </div>
+          </form>
 
         </div>
 
       </div>
-    </section><!-- End Sign Up / Sign In Section -->
+    </section><!-- End Sign In Section -->
 
   </main><!-- End #main -->
 
