--- a/signup.html
+++ b/signup.html
@@ -80,8 +80,6 @@
         <div class="row">
           <!--Reused 'Login-register' form from https://mdbootstrap.com/docs/standard/extended/login/# to create the sign-up / sign in form.-->
 
-          <form>
-
             <!-- Name input -->
             <div class="form-outline mb-4">
               <input type="text" id="registerName" class="form-control" />
@@ -145,12 +143,10 @@
               </label>
             </div>
 
-            <!-- Submit button -->
-            <button type="submit" id="signUp" name="signUp" class="btn btn-primary btn-block mb-3">Sign up</button>
-          </form>
-
+            <!-- Sign Up button -->
+            <button id="signUp" name="signUp" class="btn btn-primary btn-block mb-3">Sign up</button
         </div>
-
+        </div>
       </div>
     </section><!-- End Sign Up / Sign In Section -->
 
@@ -222,8 +218,8 @@
         var password = document.getElementById('registerPassword').value;
         var name = document.getElementById('registerName').value;
         var phoneNumber = document.getElementById('registerPhoneNumber').value;
-        //var preferredContactMethod = document.getElementById('registerPreferredContactMethod').value;
-        //var role = document.getElementById('registerRole').value;
+        var preferredContactMethod = document.getElementById('registerPreferredContactMethod').value;
+        var role = document.getElementById('registerRole').value;
         var areas = document.getElementById('registerAreas').value;
 
         createUserWithEmailAndPassword(auth, email, password)
@@ -236,18 +232,18 @@
                     email: email,
                     username: username,
                     phoneNumber: phoneNumber,
-                    //preferredContactMethod: preferredContactMethod,
-                    //role: role,
+                    preferredContactMethod: preferredContactMethod,
+                    role: role,
                     areas: areas
                   });
                 
-                alert('user created');
+                window.location.href = "mentors.html";
             })
             .catch((error) => {
                 const errorCode = error.code;
                 const errorMessage = error.message;
                 
-                alert(errorMessage);
+                alert(errorMessage + "Try again, please.");
             });
 
     });
